krakend/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: krakend
  labels:
    app: krakend
