krakend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: krakend-deployment
spec:
  selector:
    matchLabels:
      app: krakend
  replicas: 1 # Switch to 2 in PROD env.
  template:
    metadata:
      labels:
        app: krakend
    spec:
      containers:
      - name: krakend
        image: 7997/krakend:48f7b1617b25e607e2eeea00e88d249eeb60c6b5 # Note: Image for ARM64 arch
        ports:
        - containerPort: 8080
        # imagePullPolicy: Never # Decomment when owr image is available
        command: [ "/usr/bin/krakend" ]
        args: [ "run", "-d", "-c", "/etc/krakend/krakend.json", "-p", "8080" ]
        resources:
          limits: # Note: Check if resources are enough
            memory: "256Mi"
            cpu: "500m"
