krakend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: krakend-service
spec:
  type: NodePort # Note: see nodeport definition
  ports:
  - name: http
    port: 8000
    targetPort: 8080
    protocol: TCP
  selector:
    app: krakend
