krakend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    app: krakend
    app.kubernetes.io/instance: krakend
  name: krakend
  namespace: krakend
spec:
  ingressClassName: traefik
  rules:
    - host: api.oggivendo.com
      http:
        paths:
          - backend:
              service:
                name: krakend-service
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - api.oggivendo.com
      secretName: http-oggivendo-tls
